--- a/public/index.css
+++ b/public/index.css
@@ -31,7 +31,7 @@ h1 {
 }
 
 .macbookPro div {
-    margin-left: 760px;
+    margin-left: 65%;
 }
 
 .macbookPro a {
@@ -84,7 +84,7 @@ hr {
 }
 
 .touchBar p {
-    margin-left: 300px;
+    margin-left: 23.25%;
 }
 
 .imgTouchBar {
@@ -106,12 +106,11 @@ hr {
 
 .price div {
     display: flex;
-    margin-left: 300px;
+    margin-left: 27%;
 }
 
 .price p {
-    padding-left: 25%;
-    padding-right: 25%;
+    padding-right: 70%;
 }
 
 .finish {
@@ -142,7 +141,8 @@ hr {
 }
 
 .display div {
-    margin-left: 320px;
+    margin-left: 25%;
+    margin-right: 5%;
 }
 
 .display h2 {
@@ -158,7 +158,7 @@ hr {
 
 .pDiv {
     display: flex;
-    margin-left: 295px;
+    margin-left: 23%;
 }
 
 .processor p {
@@ -173,11 +173,11 @@ hr {
 
 .sDiv {
     display: flex;
-    margin-left: 310px;
+    margin-left: 25%;
 }
 
 .sDiv div {
-    padding-right: 100px;
+    padding-right: 5%;
 }
 
 .memory {
